<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar añadida -->

    <!-- Contenido principal debajo de la Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:title="@string/main_activity"
        android:titleTextColor="@android:color/white"
        app:navigationIcon="@drawable/ic_order" />

    <TextView
        android:id="@+id/textintro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:text="@string/intro_text"
        android:textSize="@dimen/text_heading"
        android:padding="@dimen/padding_regular" />

    <TextView
        android:id="@+id/choose_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textintro"
        android:padding="@dimen/padding_regular"
        android:text="@string/choose_a_dessert" />

    <ImageView
        android:id="@+id/donut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_dessert"
        android:padding="@dimen/padding_regular"
        android:contentDescription="@string/donuts"
        android:src="@drawable/donut_circle"
        android:onClick="showFoodOrder" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/donut"
        android:layout_toRightOf="@id/donut"
        android:padding="@dimen/padding_wide"
        android:text="@string/donuts" />

    <ImageView
        android:id="@+id/ice_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/donut"
        android:padding="@dimen/padding_regular"
        android:contentDescription="@string/ice_cream_sandwiches"
        android:src="@drawable/icecream_circle"
        android:onClick="showFoodOrder" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/donut"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="-247dp"
        android:layout_toRightOf="@id/ice_cream"
        android:padding="@dimen/padding_wide"
        android:text="@string/ice_cream_sandwiches" />

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ice_cream"
        android:padding="@dimen/padding_regular"
        android:contentDescription="@string/froyo"
        android:src="@drawable/froyo_circle"
        android:onClick="showFoodOrder" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ice_cream"
        android:layout_toRightOf="@id/froyo"
        android:padding="@dimen/padding_wide"
        android:text="@string/froyo" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fab_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_cart"
        android:onClick="goToOrderActivity"
        android:padding="12dp"
        android:background="@drawable/rounded_button_background" />

</RelativeLayout>
